--- a/rtl_kernels/cam/xrt.ini
+++ b/rtl_kernels/cam/xrt.ini
@@ -2,8 +2,8 @@
 opencl_trace=true
 device_trace=fine
 device_counters=true
-# [Emulation]
-# debug_mode=gui
+; [Emulation]
+; debug_mode=gui
 
 [Runtime]
 exclusive_cu_context=true
