--- a/rtl_kernels/cam_1/krnl_cam_rtl.cfg
+++ b/rtl_kernels/cam_1/krnl_cam_rtl.cfg
@@ -1,18 +1,32 @@
 [connectivity]
-nk=krnl_input:2
-nk=krnl_output:2
-nk=krnl_cam_rtl:2
+nk=krnl_input:1
+nk=krnl_output:1
+nk=krnl_cam_rtl:1
 stream_connect=krnl_input_1.inStream:krnl_cam_rtl_1.p0
 stream_connect=krnl_cam_rtl_1.p1:krnl_output_1.outStream 
-stream_connect=krnl_input_2.inStream:krnl_cam_rtl_2.p0
-stream_connect=krnl_cam_rtl_2.p1:krnl_output_2.outStream
+# stream_connect=krnl_input_2.inStream:krnl_cam_rtl_2.p0
+# stream_connect=krnl_cam_rtl_2.p1:krnl_output_2.outStream
+# stream_connect=krnl_input_3.inStream:krnl_cam_rtl_3.p0
+# stream_connect=krnl_cam_rtl_3.p1:krnl_output_3.outStream
+# stream_connect=krnl_input_4.inStream:krnl_cam_rtl_4.p0  
+# stream_connect=krnl_cam_rtl_4.p1:krnl_output_4.outStream
 sp=krnl_input_1.in:HBM[0]
 sp=krnl_output_1.out:HBM[0]
-sp=krnl_input_2.in:HBM[1]
-sp=krnl_output_2.out:HBM[1]
+# sp=krnl_input_2.in:HBM[4]
+# sp=krnl_output_2.out:HBM[4]
+# sp=krnl_input_3.in:HBM[8]
+# sp=krnl_output_3.out:HBM[8]
+# sp=krnl_input_4.in:HBM[12]
+# sp=krnl_output_4.out:HBM[12]
 slr=krnl_input_1:SLR0
 slr=krnl_output_1:SLR0
 slr=krnl_cam_rtl_1:SLR0
-slr=krnl_input_2:SLR0
-slr=krnl_output_2:SLR0
-slr=krnl_cam_rtl_2:SLR1
+# slr=krnl_input_2:SLR0
+# slr=krnl_output_2:SLR0
+# slr=krnl_cam_rtl_2:SLR1
+# slr=krnl_input_3:SLR0
+# slr=krnl_output_3:SLR0
+# slr=krnl_cam_rtl_3:SLR1
+# slr=krnl_input_4:SLR0
+# slr=krnl_output_4:SLR0
+# slr=krnl_cam_rtl_4:SLR2
