--- a/rtl_kernels/cam_1/krnl_cam_rtl.cfg
+++ b/rtl_kernels/cam_1/krnl_cam_rtl.cfg
@@ -1,32 +1,116 @@
 [connectivity]
-nk=krnl_input:1
-nk=krnl_output:1
-nk=krnl_cam_rtl:1
+nk=krnl_input:8
+nk=krnl_output:8
+nk=krnl_cam_rtl:8
 stream_connect=krnl_input_1.inStream:krnl_cam_rtl_1.p0
 stream_connect=krnl_cam_rtl_1.p1:krnl_output_1.outStream 
-# stream_connect=krnl_input_2.inStream:krnl_cam_rtl_2.p0
-# stream_connect=krnl_cam_rtl_2.p1:krnl_output_2.outStream
-# stream_connect=krnl_input_3.inStream:krnl_cam_rtl_3.p0
-# stream_connect=krnl_cam_rtl_3.p1:krnl_output_3.outStream
-# stream_connect=krnl_input_4.inStream:krnl_cam_rtl_4.p0  
-# stream_connect=krnl_cam_rtl_4.p1:krnl_output_4.outStream
+stream_connect=krnl_input_2.inStream:krnl_cam_rtl_2.p0
+stream_connect=krnl_cam_rtl_2.p1:krnl_output_2.outStream
+stream_connect=krnl_input_3.inStream:krnl_cam_rtl_3.p0
+stream_connect=krnl_cam_rtl_3.p1:krnl_output_3.outStream
+stream_connect=krnl_input_4.inStream:krnl_cam_rtl_4.p0  
+stream_connect=krnl_cam_rtl_4.p1:krnl_output_4.outStream
+stream_connect=krnl_input_5.inStream:krnl_cam_rtl_5.p0
+stream_connect=krnl_cam_rtl_5.p1:krnl_output_5.outStream
+stream_connect=krnl_input_6.inStream:krnl_cam_rtl_6.p0
+stream_connect=krnl_cam_rtl_6.p1:krnl_output_6.outStream
+stream_connect=krnl_input_7.inStream:krnl_cam_rtl_7.p0
+stream_connect=krnl_cam_rtl_7.p1:krnl_output_7.outStream
+stream_connect=krnl_input_8.inStream:krnl_cam_rtl_8.p0
+stream_connect=krnl_cam_rtl_8.p1:krnl_output_8.outStream
+# stream_connect=krnl_input_9.inStream:krnl_cam_rtl_9.p0
+# stream_connect=krnl_cam_rtl_9.p1:krnl_output_9.outStream
+# stream_connect=krnl_input_10.inStream:krnl_cam_rtl_10.p0
+# stream_connect=krnl_cam_rtl_10.p1:krnl_output_10.outStream
+# stream_connect=krnl_input_11.inStream:krnl_cam_rtl_11.p0
+# stream_connect=krnl_cam_rtl_11.p1:krnl_output_11.outStream
+# stream_connect=krnl_input_12.inStream:krnl_cam_rtl_12.p0
+# stream_connect=krnl_cam_rtl_12.p1:krnl_output_12.outStream
+# stream_connect=krnl_input_13.inStream:krnl_cam_rtl_13.p0
+# stream_connect=krnl_cam_rtl_13.p1:krnl_output_13.outStream
+# stream_connect=krnl_input_14.inStream:krnl_cam_rtl_14.p0
+# stream_connect=krnl_cam_rtl_14.p1:krnl_output_14.outStream
+# stream_connect=krnl_input_15.inStream:krnl_cam_rtl_15.p0
+# stream_connect=krnl_cam_rtl_15.p1:krnl_output_15.outStream
+# stream_connect=krnl_input_16.inStream:krnl_cam_rtl_16.p0
+# stream_connect=krnl_cam_rtl_16.p1:krnl_output_16.outStream
 sp=krnl_input_1.in:HBM[0]
 sp=krnl_output_1.out:HBM[0]
-# sp=krnl_input_2.in:HBM[4]
-# sp=krnl_output_2.out:HBM[4]
-# sp=krnl_input_3.in:HBM[8]
-# sp=krnl_output_3.out:HBM[8]
-# sp=krnl_input_4.in:HBM[12]
-# sp=krnl_output_4.out:HBM[12]
+sp=krnl_input_2.in:HBM[2]
+sp=krnl_output_2.out:HBM[2]
+sp=krnl_input_3.in:HBM[4]
+sp=krnl_output_3.out:HBM[4]
+sp=krnl_input_4.in:HBM[6]
+sp=krnl_output_4.out:HBM[6]
+sp=krnl_input_5.in:HBM[8]
+sp=krnl_output_5.out:HBM[8]
+sp=krnl_input_6.in:HBM[10]
+sp=krnl_output_6.out:HBM[10]
+sp=krnl_input_7.in:HBM[12]
+sp=krnl_output_7.out:HBM[12]
+sp=krnl_input_8.in:HBM[14]
+sp=krnl_output_8.out:HBM[14]
+# sp=krnl_input_9.in:HBM[16]
+# sp=krnl_output_9.out:HBM[16]
+# sp=krnl_input_10.in:HBM[18]
+# sp=krnl_output_10.out:HBM[18]
+# sp=krnl_input_11.in:HBM[20]
+# sp=krnl_output_11.out:HBM[20]
+# sp=krnl_input_12.in:HBM[22]
+# sp=krnl_output_12.out:HBM[22]
+# sp=krnl_input_13.in:HBM[24]
+# sp=krnl_output_13.out:HBM[24]
+# sp=krnl_input_14.in:HBM[26]
+# sp=krnl_output_14.out:HBM[26]
+# sp=krnl_input_15.in:HBM[28]
+# sp=krnl_output_15.out:HBM[28]
+# sp=krnl_input_16.in:HBM[30]
+# sp=krnl_output_16.out:HBM[30]
 slr=krnl_input_1:SLR0
 slr=krnl_output_1:SLR0
-slr=krnl_cam_rtl_1:SLR0
-# slr=krnl_input_2:SLR0
-# slr=krnl_output_2:SLR0
-# slr=krnl_cam_rtl_2:SLR1
-# slr=krnl_input_3:SLR0
-# slr=krnl_output_3:SLR0
-# slr=krnl_cam_rtl_3:SLR1
-# slr=krnl_input_4:SLR0
-# slr=krnl_output_4:SLR0
-# slr=krnl_cam_rtl_4:SLR2
+slr=krnl_cam_rtl_1:SLR1
+slr=krnl_input_2:SLR0
+slr=krnl_output_2:SLR0
+slr=krnl_cam_rtl_2:SLR1
+slr=krnl_input_3:SLR0
+slr=krnl_output_3:SLR0
+slr=krnl_cam_rtl_3:SLR1
+slr=krnl_input_4:SLR0
+slr=krnl_output_4:SLR0
+slr=krnl_cam_rtl_4:SLR1
+slr=krnl_input_5:SLR0
+slr=krnl_output_5:SLR0
+slr=krnl_cam_rtl_5:SLR1
+slr=krnl_input_6:SLR0
+slr=krnl_output_6:SLR0
+slr=krnl_cam_rtl_6:SLR1
+slr=krnl_input_7:SLR0
+slr=krnl_output_7:SLR0
+slr=krnl_cam_rtl_7:SLR1
+slr=krnl_input_8:SLR0
+slr=krnl_output_8:SLR0
+slr=krnl_cam_rtl_8:SLR1
+# slr=krnl_input_9:SLR0
+# slr=krnl_output_9:SLR0
+# slr=krnl_cam_rtl_9:SLR1
+# slr=krnl_input_10:SLR0
+# slr=krnl_output_10:SLR0
+# slr=krnl_cam_rtl_10:SLR1
+# slr=krnl_input_11:SLR0
+# slr=krnl_output_11:SLR0
+# slr=krnl_cam_rtl_11:SLR2
+# slr=krnl_input_12:SLR0
+# slr=krnl_output_12:SLR0
+# slr=krnl_cam_rtl_12:SLR2
+# slr=krnl_input_13:SLR0
+# slr=krnl_output_13:SLR0
+# slr=krnl_cam_rtl_13:SLR2
+# slr=krnl_input_14:SLR0
+# slr=krnl_output_14:SLR0
+# slr=krnl_cam_rtl_14:SLR2
+# slr=krnl_input_15:SLR0
+# slr=krnl_output_15:SLR0
+# slr=krnl_cam_rtl_15:SLR2
+# slr=krnl_input_16:SLR0
+# slr=krnl_output_16:SLR0
+# slr=krnl_cam_rtl_16:SLR2
