--- a/TriangleCount/tc.cfg
+++ b/TriangleCount/tc.cfg
@@ -4,3 +4,27 @@ stream_connect=router_tc_1.router_out:mem_write_1.router_out
 nk=mem_write:1
 nk=router_tc:1
 nk=triangle_count:1
+nk=krnl_cam_rtl:16
+
+; stream_connect=krnl_input_1.inStream1:krnl_cam_rtl_1.p0
+; stream_connect=krnl_cam_rtl_1.p1:krnl_output_1.outStream1
+
+; slr=krnl_cam_rtl_1:SLR0
+; slr=krnl_cam_rtl_2:SLR0
+; slr=krnl_cam_rtl_3:SLR0
+; slr=krnl_cam_rtl_4:SLR0
+; slr=krnl_cam_rtl_5:SLR0
+
+; slr=krnl_cam_rtl_6:SLR1
+
+; slr=krnl_cam_rtl_7:SLR2
+; slr=krnl_cam_rtl_8:SLR2
+; slr=krnl_cam_rtl_9:SLR2
+; slr=krnl_cam_rtl_10:SLR2
+; slr=krnl_cam_rtl_11:SLR2
+
+; slr=krnl_cam_rtl_12:SLR3
+; slr=krnl_cam_rtl_13:SLR3
+; slr=krnl_cam_rtl_14:SLR3
+; slr=krnl_cam_rtl_15:SLR3
+; slr=krnl_cam_rtl_16:SLR3
