--- a/TriangleCount/tc.cfg
+++ b/TriangleCount/tc.cfg
@@ -3,55 +3,55 @@ stream_connect=triangle_count_1.tc_stream:router_tc_1.tc_stream_in
 stream_connect=router_tc_1.router_out:post_router_1.in
 
 stream_connect=post_router_1.out_1:krnl_cam_rtl_1.p0
-stream_connect=krnl_cam_rtl_1.p1:mem_write_1.router_out
+stream_connect=krnl_cam_rtl_1.p1:sum_count_1.block_in_1
 
 stream_connect=post_router_1.out_2:krnl_cam_rtl_2.p0
-stream_connect=krnl_cam_rtl_2.p1:mem_write_2.router_out
+stream_connect=krnl_cam_rtl_2.p1:sum_count_1.block_in_2
 
 stream_connect=post_router_1.out_3:krnl_cam_rtl_3.p0
-stream_connect=krnl_cam_rtl_3.p1:mem_write_3.router_out
+stream_connect=krnl_cam_rtl_3.p1:sum_count_1.block_in_3
 
 stream_connect=post_router_1.out_4:krnl_cam_rtl_4.p0
-stream_connect=krnl_cam_rtl_4.p1:mem_write_4.router_out
+stream_connect=krnl_cam_rtl_4.p1:sum_count_1.block_in_4
 
 stream_connect=post_router_1.out_5:krnl_cam_rtl_5.p0
-stream_connect=krnl_cam_rtl_5.p1:mem_write_5.router_out
+stream_connect=krnl_cam_rtl_5.p1:sum_count_1.block_in_5
 
 stream_connect=post_router_1.out_6:krnl_cam_rtl_6.p0
-stream_connect=krnl_cam_rtl_6.p1:mem_write_6.router_out
+stream_connect=krnl_cam_rtl_6.p1:sum_count_1.block_in_6
 
 stream_connect=post_router_1.out_7:krnl_cam_rtl_7.p0
-stream_connect=krnl_cam_rtl_7.p1:mem_write_7.router_out
+stream_connect=krnl_cam_rtl_7.p1:sum_count_1.block_in_7
 
 stream_connect=post_router_1.out_8:krnl_cam_rtl_8.p0
-stream_connect=krnl_cam_rtl_8.p1:mem_write_8.router_out
+stream_connect=krnl_cam_rtl_8.p1:sum_count_1.block_in_8
 
 stream_connect=post_router_1.out_9:krnl_cam_rtl_9.p0
-stream_connect=krnl_cam_rtl_9.p1:mem_write_9.router_out
+stream_connect=krnl_cam_rtl_9.p1:sum_count_1.block_in_9
 
 stream_connect=post_router_1.out_10:krnl_cam_rtl_10.p0
-stream_connect=krnl_cam_rtl_10.p1:mem_write_10.router_out
+stream_connect=krnl_cam_rtl_10.p1:sum_count_1.block_in_10
 
 stream_connect=post_router_1.out_11:krnl_cam_rtl_11.p0
-stream_connect=krnl_cam_rtl_11.p1:mem_write_11.router_out
+stream_connect=krnl_cam_rtl_11.p1:sum_count_1.block_in_11
 
 stream_connect=post_router_1.out_12:krnl_cam_rtl_12.p0
-stream_connect=krnl_cam_rtl_12.p1:mem_write_12.router_out
+stream_connect=krnl_cam_rtl_12.p1:sum_count_1.block_in_12
 
 stream_connect=post_router_1.out_13:krnl_cam_rtl_13.p0
-stream_connect=krnl_cam_rtl_13.p1:mem_write_13.router_out
+stream_connect=krnl_cam_rtl_13.p1:sum_count_1.block_in_13
 
 stream_connect=post_router_1.out_14:krnl_cam_rtl_14.p0
-stream_connect=krnl_cam_rtl_14.p1:mem_write_14.router_out
+stream_connect=krnl_cam_rtl_14.p1:sum_count_1.block_in_14
 
 stream_connect=post_router_1.out_15:krnl_cam_rtl_15.p0
-stream_connect=krnl_cam_rtl_15.p1:mem_write_15.router_out
+stream_connect=krnl_cam_rtl_15.p1:sum_count_1.block_in_15
 
 stream_connect=post_router_1.out_16:krnl_cam_rtl_16.p0
-stream_connect=krnl_cam_rtl_16.p1:mem_write_16.router_out
+stream_connect=krnl_cam_rtl_16.p1:sum_count_1.block_in_16
 
 nk=router_tc:1
 nk=triangle_count:1
 nk=post_router:1
-nk=mem_write:16
 nk=krnl_cam_rtl:16
+nk=sum_count:1
