[UPDATE] camera ready for CAM block

--- a/CAMUnit/cam_block/param.cfg
+++ b/CAMUnit/cam_block/param.cfg
@@ -1,4 +1,6 @@
-CUSTORMIZED_BUS_WIDTH=512
-CUSTORMIZED_CAM_SIZE=256
-CUSTORMIZED_STORAGE_TYPE=BINARY
-CUSTORMIZED_MASK=48'h0
+CUSTOMIZED_BUS_WIDTH=520
+CUSTOMIZED_CAM_SIZE=128
+CUSTOMIZED_ALUMODE=4'b0100
+CUSTOMIZED_OPMODE=9'b000110011
+CUSTOMIZED_MASK=48'h0
+CUSTOMIZED_ENCODE_SCHEME=PRIORITY_ENCODE
