--- a/CAMUnit/cam_unit/param.cfg
+++ b/CAMUnit/cam_unit/param.cfg
@@ -1,8 +1,7 @@
-BUS_WIDTH=512
-CAM_SIZE=128
-STORAGE_TYPE=BINARY
-MASK=48'h0
-BLOCK_NUM=16
-BLOCK_SIZE=128
-BIT_WIDTH=32
-ENCODE_SCHEME=1
+CUSTOMIZED_BUS_WIDTH=520
+CUSTOMIZED_CAM_SIZE=128
+CUSTOMIZED_ALUMODE=4'b0100
+CUSTOMIZED_OPMODE=9'b000110011
+CUSTOMIZED_MASK=48'h0
+CUSTOMIZED_ENCODE_SCHEME=PRIORITY_ENCODE
+CUSTOMIZED_BLOCK_NUM=16
